# PyScribe

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SECURITY.md  STACK.md  app.py  benchmark.py  benchmark_ui.py  diar_backends.py  diarization.py  launch.bat  main.py  models.py  pyproject.toml  pyscribe.py  requirements.txt  security_best_practices_report.md  transcriber.py  ui.py  utils.py
docs/: llm_postprocess_plan.md  qt_help.md  user_guide.md
scripts/: run_listener.sh
services/: __init__.py  catalog_service.py  config_service.py  granite_speech_service.py  hf_auth_service.py  listener_security_service.py  live_transcription_service.py  live_vram_service.py  llm_connection_service.py  llm_postprocess_service.py  logging_service.py  model_download_service.py  model_service.py  multimodal_service.py  platform_service.py  prompt_template_service.py  runtime_compat.py  runtime_env_service.py  transcription_service.py
tests/: smoke_cli.py  test_batch_queue.py  test_benchmark_dialog.py  test_diarization.py  test_granite_speech_service.py  test_launcher.py  test_listener_and_diar_backends.py  test_listener_llm_postprocess_helpers.py  test_live_transcription_service.py  test_live_vram_service.py  test_llm_connection_service.py  test_llm_postprocess_dialog.py  test_llm_postprocess_service.py  test_model_download_service.py  test_model_service.py  test_multimodal_service.py  test_prompt_templates_and_config.py  test_qt_live_mode.py  test_qt_main_window_worker.py  test_security_hardening.py  test_transcription_service.py
(+14 files in other folders)
